--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,16 +14,16 @@ setw -g automatic-rename off
 setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
-unbind C-b
-set -g prefix C-a
+# unbind C-b
+# set -g prefix C-a
 
-# Set parent terminal title to reflect current window in tmux session 
+# Set parent terminal title to reflect current window in tmux session
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
 # Start index of window/pane with 1, because we're humans, not computers
-set -g base-index 1
-setw -g pane-base-index 1
+# set -g base-index 1
+# setw -g pane-base-index 1
 
 # Enable mouse support
 set -g mouse on
@@ -38,10 +38,10 @@ unbind "\$" # rename-session
 unbind ,    # rename-window
 unbind %    # split-window -h
 unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
+unbind \}    # swap-pane -D
+unbind \{    # swap-pane -U
 unbind [    # paste-buffer
-unbind ]    
+unbind ]
 unbind "'"  # select-window
 unbind n    # next-window
 unbind p    # previous-window
@@ -50,7 +50,7 @@ unbind M-n  # next window with alert
 unbind M-p  # next window with alert
 unbind o    # focus thru panes
 unbind &    # kill-window
-unbind "#"  # list-buffer 
+unbind "#"  # list-buffer
 unbind =    # choose-buffer
 unbind z    # zoom-pane
 unbind M-Up  # resize 5 rows up
@@ -62,11 +62,12 @@ unbind M-Left # resize 5 rows left
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
 
-# Reload tmux configuration 
+# Reload tmux configuration
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
 bind c new-window -c "#{pane_current_path}"
+bind -n C-t new-window -c "#{pane_current_path}"
 
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
@@ -87,6 +88,26 @@ bind -r ] select-pane -t :.+
 bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
 
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+# Vim style pane selection
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# switch windows with alt p/n instead of prefix p/n
+bind -n M-p  previous-window
+bind -n M-n next-window
+
 # Zoom pane
 bind + resize-pane -Z
 
@@ -95,7 +116,7 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
+bind \\ if '[ #{pane_index} -eq 1 ]' \
      'swap-pane -s "!"' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
@@ -153,7 +174,13 @@ bind p paste-buffer
 bind C-p choose-buffer
 
 # trigger copy mode by
-bind -n M-Up copy-mode
+bind -n C-u copy-mode
+
+# Use v to select, not space
+bind-key -T copy-mode-vi v send -X begin-selection
+# C-v for block selection
+unbind-key -T copy-mode-vi v
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
 
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
@@ -192,7 +219,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane \
     send-keys -X copy-pipe "$yank"
 bind -T copy-mode-vi MouseDown1Pane select-pane \;\
    send-keys -X clear-selection
-    
+
 # iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
 # tmux show-options -g -s set-clipboard
 # set-clipboard on|external
@@ -247,7 +274,7 @@ separator_powerline_right=""
 # setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[fg=$color_light] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -363,16 +390,16 @@ if-shell 'test -n "$SSH_CLIENT"' \
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 
 # Also, change some visual styles when window keys are off
-bind -T root F12  \
+bind -T root C-f  \
     set prefix None \;\
     set key-table off \;\
     set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
+    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[fg=$color_window_off_status_bg] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
     set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
 
-bind -T off F12 \
+bind -T off C-f \
   set -u prefix \;\
   set -u key-table \;\
   set -u status-style \;\
