--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,8 +43,8 @@ unbind \{    # swap-pane -U
 unbind [    # paste-buffer
 unbind ]
 unbind "'"  # select-window
-unbind n    # next-window
-unbind p    # previous-window
+# unbind n    # next-window
+# unbind p    # previous-window
 unbind l    # last-window
 unbind M-n  # next window with alert
 unbind M-p  # next window with alert
@@ -70,7 +70,7 @@ bind c new-window -c "#{pane_current_path}"
 bind -n C-t new-window -c "#{pane_current_path}"
 
 # Prompt to rename window right after it's created
-set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+# set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
@@ -80,12 +80,9 @@ bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 bind | split-window -h -c "#{pane_current_path}"
 bind _ split-window -v -c "#{pane_current_path}"
 
-# Select pane and windows
-bind -r C-[ previous-window
-bind -r C-] next-window
+# Select and resize panes
 bind -r [ select-pane -t :.-
 bind -r ] select-pane -t :.+
-bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
 
 bind-key J resize-pane -D 5
@@ -104,9 +101,16 @@ bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
-# switch windows with alt p/n instead of prefix p/n
-bind -n M-p  previous-window
-bind -n M-n next-window
+# Cycle thru MRU tabs
+bind -r Tab last-window
+
+# Switch windows ctrl p/n instead of prefix p/n
+bind -n C-p previous-window
+bind -n C-n next-window
+
+# Move current window
+bind-key -n M-p swap-window -t -1 \; previous-window
+bind-key -n M-n swap-window -t +1 \; next-window
 
 # Zoom pane
 bind + resize-pane -Z
@@ -274,7 +278,7 @@ separator_powerline_right=""
 # setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[fg=$color_light] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[fg=$color_light] #I:#W #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -394,7 +398,7 @@ bind -T root C-f  \
     set prefix None \;\
     set key-table off \;\
     set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[fg=$color_window_off_status_bg] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
+    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[fg=$color_window_off_status_bg] #I:#W #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
     set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
