--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,7 @@
 # ==========================
 
 set -g default-terminal "screen-256color"
+set -g default-command "${SHELL}"
 set -g history-limit 20000
 set -g buffer-limit 20
 set -sg escape-time 0
@@ -27,6 +28,17 @@ set -g set-titles-string "#I:#W"
 
 # Enable mouse support
 set -g mouse on
+
+# Allow passthrough of escape sequences (needed for OSC 52 clipboard in nested sessions)
+set -g allow-passthrough on
+
+# Enable OSC 52 clipboard forwarding at every tmux level.
+# Each level intercepts OSC 52 from pane output and re-sends it to the outer
+# terminal. Without Ms, set-clipboard silently drops the sequence.
+# This is critical for L3 clipboard: L2 passthrough strips the DCS wrapper,
+# so the raw OSC 52 must be forwarded by each subsequent level via set-clipboard.
+set -g set-clipboard on
+set -as terminal-overrides ',*:Ms=\E]52;c;%p2%s\007'
 
 
 # ==========================
@@ -95,11 +107,11 @@ bind-key M-k resize-pane -U
 bind-key M-h resize-pane -L
 bind-key M-l resize-pane -R
 
-# Vim style pane selection
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# Vim style pane selection (skips spacer panes from layout system)
+bind -n C-h run-shell '~/.tmux/select_pane.sh -L'
+bind -n C-j run-shell '~/.tmux/select_pane.sh -D'
+bind -n C-k run-shell '~/.tmux/select_pane.sh -U'
+bind -n C-l run-shell '~/.tmux/select_pane.sh -R'
 
 # Cycle thru MRU tabs
 bind -r Tab last-window
@@ -125,8 +137,7 @@ bind \\ if '[ #{pane_index} -eq 1 ]' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
 # Kill pane/window/session shortcuts
-bind x kill-pane
-bind X kill-window
+bind x kill-window
 bind C-x confirm-before -p "kill other windows? (y/n)" "kill-window -a"
 bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
 
@@ -291,7 +302,7 @@ set -g status on
 set -g status-interval 5
 set -g status-position top
 set -g status-justify left
-set -g status-right-length 100
+set -g status-right-length 120
 
 # define widgets we're going to use in status bar
 # note, that this is not the complete list, some of them are loaded from plugins
@@ -300,11 +311,26 @@ wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
 wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
 wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
-# TODO: highlighted for nested local session as well
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
-set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+# Level indicator (L1 default; overridden by tmux.remote.conf / tmux.compute.conf)
+set -g @tmux_level "L1"
+
+wg_ultrawide="#[fg=$color_secondary]#{?#{==:#{@ultrawide_mode},on},UW,}#[default]"
+set -g status-left "#[fg=$color_main,bold] #{@tmux_level} #[default]"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_ultrawide | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+
+# =====================================
+# ===    Ultrawide layout system    ===
+# =====================================
+set -g @center_width 120
+set -g @ultrawide_mode on
+
+bind 3 run-shell '~/.tmux/layout.sh triple'
+bind u run-shell '~/.tmux/layout.sh toggle-ultrawide'
+
+# Auto-apply triple layout to new windows when ultrawide mode is on
+set-hook -g after-new-window 'run-shell -b "~/.tmux/layout.sh auto"'
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]●#[default]"
@@ -382,18 +408,17 @@ set -g @open-S 'https://www.google.com/search?q='
 # ===   Nesting local and remote sessions     ===
 # ==============================================
 
-# Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.remote.conf'
+# 3-level nesting: laptop (L1) -> dev node (L2) -> compute node (L3)
+#
+# Two independent toggles:
+#   C-f = toggle L1 <-> inner (L2/L3) --- bound here in base config
+#   C-g = toggle L2 <-> L3             --- bound in tmux.remote.conf
+#
+# From L1: C-f -> L2 (or L3 if L2 was off)
+# From L2: C-f -> L1,  C-g -> L3
+# From L3: C-f -> L1,  C-g -> L2
 
-# We want to have single prefix key "C-a", usable both for local and remote session
-# we don't want to "C-a" + "a" approach either
-# Idea is to turn off all key bindings and prefix handling on local session,
-# so that all keystrokes are passed to inner/remote session
-
-# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
-
-# Also, change some visual styles when window keys are off
+# C-f (root table): Go deeper --- disable this level, pass keys to inner session
 bind -T root C-f  \
     set prefix None \;\
     set key-table off \;\
@@ -403,6 +428,7 @@ bind -T root C-f  \
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
 
+# C-f (off table): Restore this level (toggle back to L1)
 bind -T off C-f \
   set -u prefix \;\
   set -u key-table \;\
@@ -410,6 +436,21 @@ bind -T off C-f \
   set -u window-status-current-style \;\
   set -u window-status-current-format \;\
   refresh-client -S
+
+# Clean up stale bindings from previous iterations (must come BEFORE
+# if-shell sources, since if-shell is synchronous and remote.conf
+# re-adds C-g to the off table for L2).
+unbind -T off C-g
+unbind -T off C-q
+
+# Level detection: L2 (SSH), L3 (TMUX_NEST_LEVEL=3 via ctmux alias)
+# These MUST come after the unbinds above, since remote.conf binds C-g
+# in the off table and we don't want the unbind to undo it.
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file ~/.tmux/tmux.remote.conf'
+
+if-shell '[ "${TMUX_NEST_LEVEL:-0}" -ge 3 ]' \
+    'source-file ~/.tmux/tmux.compute.conf'
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
