--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -1,10 +1,36 @@
-# show status bar at bottom for remote session,
-# so it do not stack together with local session's one
+# ==============================================
+# ===   Remote (L2) session overrides        ===
+# ==============================================
+
+# Status bar at bottom so it doesn't stack with L1's top bar
 set -g status-position bottom
 
-# Set port of SSH remote tunnel, where tmux will pipe buffers to transfer on local machine for copy
+# Level indicator
+set -g @tmux_level "L2"
+
+# L2 keeps the same orange accent as L1, distinguished by:
+# - status bar position (bottom vs L1's top)
+# - level indicator (L2 vs L1)
+
+# Set port of SSH remote tunnel for clipboard transfer
 set -g @copy_backend_remote_tunnel_port 11988
 
 # In remote mode we don't show "clock" and "battery status" widgets
-set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | #{online_status}"
+wg_is_zoomed="#[fg=colour232,bg=colour134]#{?window_zoomed_flag,[Z],}#[default]"
+wg_is_keys_off="#[fg=white,bg=colour088]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+wg_user_host="#[fg=colour134]#(whoami)#[default]@#H"
+wg_ultrawide="#[fg=colour134]#{?#{==:#{@ultrawide_mode},on},UW,}#[default]"
+
+set -g status-left "#[fg=colour166,bold] #{@tmux_level} #[default]"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_ultrawide | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | #{online_status}"
+
+# C-g toggle: L2 <-> L3 (same pattern as C-f toggle in base config)
+# C-g is not bound on L1, so it passes through to L2.
+color_window_off_status_bg="colour238"
+color_window_off_status_current_bg="colour254"
+color_status_text="colour245"
+separator_powerline_right=""
+
+bind -T root C-g     set prefix None \;    set key-table off \;    set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[fg=$color_window_off_status_bg] #I:#W #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;    set window-status-current-style "fg=colour232,bold,bg=$color_window_off_status_current_bg" \;    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;    refresh-client -S
+
+bind -T off C-g     set -u prefix \;    set -u key-table \;    set -u status-style \;    set -u window-status-current-style \;    set -u window-status-current-format \;    refresh-client -S
