feat: agent team layout system for multi-agent workflows
3-column layout rearrangement for Claude Code agentic teams on ultrawide
monitors. Agents distribute across side columns, lead stays in center,
spacers tuck above. Dynamic auto-focus resizing on pane navigation.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -325,12 +325,20 @@ set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_ultra
 # =====================================
 set -g @center_width 120
 set -g @ultrawide_mode on
+set -g @team_spacer_split h   # h = side by side (60 each), v = stacked (120 each)
 
 bind 3 run-shell '~/.tmux/layout.sh triple'
 bind u run-shell '~/.tmux/layout.sh toggle-ultrawide'
+bind = run-shell '~/.tmux/layout.sh rebalance'
+bind t run-shell '~/.tmux/layout.sh team'
+bind y run-shell '~/.tmux/layout.sh team-restore'
 
 # Auto-apply triple layout to new windows when ultrawide mode is on
 set-hook -g after-new-window 'run-shell -b "~/.tmux/layout.sh auto"'
+
+# Auto-focus is available via: ~/.tmux/layout.sh auto-focus
+# NOT on a hook --- Claude Code switches panes constantly during agent
+# communication and the hook causes flickering. Use manually if needed.
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]●#[default]"
@@ -397,8 +405,8 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # Plugin properties
-set -g @sidebar-tree 't'
-set -g @sidebar-tree-focus 'T'
+set -g @sidebar-tree 'F7'
+set -g @sidebar-tree-focus 'F8'
 set -g @sidebar-tree-command 'tree -C'
 
 set -g @open-S 'https://www.google.com/search?q='
@@ -454,3 +462,7 @@ if-shell '[ "${TMUX_NEST_LEVEL:-0}" -ge 3 ]' \
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
+
+# Team layout bindings (after TPM so plugins can't override them)
+bind t run-shell '~/.tmux/layout.sh team'
+bind y run-shell '~/.tmux/layout.sh team-restore'
