feat: session persistence and color-coded SLURM timer
Add tmux-resurrect and tmux-continuum for automatic session
save/restore on L2 (15min) and L3 (5min). Separate save dirs per level
prevent cross-level restore accidents. L1 is manual-only (F5/F6).

Replace the SLURM job ID widget with a color-coded remaining time
countdown (green >3.5d, yellow 1-3.5d, red <1d) pulled from squeue.

Add per-pane bash history via HISTFILE keyed to session:window:pane,
flushed after every command to survive ungraceful kills.

Also add a space after the colon in CPU/MEM sysstat widget templates.

--- a/tmux/tmux.compute.conf
+++ b/tmux/tmux.compute.conf
@@ -34,8 +34,13 @@ setw -g pane-active-border-style "fg=$color_main"
 wg_is_zoomed="#[fg=colour232,bg=colour134]#{?window_zoomed_flag,[Z],}#[default]"
 wg_is_keys_off="#[fg=white,bg=colour088]#([ $(tmux show-option -qv key-table) = '"'"'off'"'"' ] && echo '"'"'OFF'"'"')#[default]"
 wg_user_host="#[fg=colour134]#(whoami)#[default]@#H"
-wg_slurm="#[fg=colour220]#(~/.tmux/slurm_info.sh)#[default]"
+wg_slurm="#[fg=colour245]Remaining:#[default] #(~/.tmux/slurm_info.sh)"
 wg_ultrawide="#[fg=colour134]#{?#{==:#{@ultrawide_mode},on},UW,}#[default]"
 
 set -g status-left "#[fg=$color_main,bold] #{@tmux_level} #[default]"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_ultrawide | $wg_slurm #{sysstat_cpu} | #{sysstat_mem} | $wg_user_host"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_ultrawide | $wg_slurm | #{sysstat_cpu} | #{sysstat_mem} | $wg_user_host"
+
+# --- Session persistence (L3) ---
+set -g @resurrect-dir '$HOME/.tmux/resurrect-L3'
+set -g @continuum-save-interval '5'
+set -g @continuum-restore 'on'
