--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -345,7 +345,8 @@ set -g @online_icon "#[fg=$color_level_ok]●#[default]"
 set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
-set -g @sysstat_mem_view_tmpl 'MEM:#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+set -g @sysstat_cpu_view_tmpl 'CPU: #[fg=#{cpu.color}]#{cpu.pused}#[default]'
+set -g @sysstat_mem_view_tmpl 'MEM: #[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
 
 # Configure colors for tmux-plugin-sysstat "MEM" and "CPU" widget
 set -g @sysstat_cpu_color_low "$color_level_ok"
@@ -403,6 +404,8 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Plugin properties
 set -g @sidebar-tree 'F7'
@@ -410,6 +413,16 @@ set -g @sidebar-tree-focus 'F8'
 set -g @sidebar-tree-command 'tree -C'
 
 set -g @open-S 'https://www.google.com/search?q='
+
+# --- Resurrect / Continuum ---
+# L1 defaults: no auto-save/restore (L1 is persistent)
+set -g @resurrect-dir '$HOME/.tmux/resurrect-L1'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'htop "~watch"'
+set -g @resurrect-save 'F5'
+set -g @resurrect-restore 'F6'
+set -g @continuum-restore 'off'
+set -g @continuum-save-interval '0'
 
 
 # ==============================================
