--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -34,3 +34,8 @@ separator_powerline_right=""
 bind -T root C-g     set prefix None \;    set key-table off \;    set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[fg=$color_window_off_status_bg] #I:#W #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;    set window-status-current-style "fg=colour232,bold,bg=$color_window_off_status_current_bg" \;    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;    refresh-client -S
 
 bind -T off C-g     set -u prefix \;    set -u key-table \;    set -u status-style \;    set -u window-status-current-style \;    set -u window-status-current-format \;    refresh-client -S
+
+# --- Session persistence (L2) ---
+set -g @resurrect-dir '$HOME/.tmux/resurrect-L2'
+set -g @continuum-save-interval '15'
+set -g @continuum-restore 'on'
