Fix stale SSH_TTY after session reattachment
Add client-attached hook that updates SSH_TTY to the current
client tty. Prevents OSC 52 clipboard forwarding from writing
to a dead pts device after SSH reconnections.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,6 +40,10 @@ set -g allow-passthrough on
 set -g set-clipboard on
 set -as terminal-overrides ',*:Ms=\E]52;c;%p2%s\007'
 
+# Auto-update SSH_TTY when reattaching to a session after SSH reconnection.
+# Without this, yank.sh sends OSC 52 to a stale/dead pts device.
+set-hook -g client-attached 'run-shell "tmux set-environment SSH_TTY #{client_tty}"'
+
 
 # ==========================
 # ===   Key bindings     ===
