Also update SSH_AUTH_SOCK on client reattach
Extend the client-attached hook to refresh the agent socket
alongside SSH_TTY, preventing stale socket errors after node
migrations or SSH reconnections.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,9 +40,10 @@ set -g allow-passthrough on
 set -g set-clipboard on
 set -as terminal-overrides ',*:Ms=\E]52;c;%p2%s\007'
 
-# Auto-update SSH_TTY when reattaching to a session after SSH reconnection.
-# Without this, yank.sh sends OSC 52 to a stale/dead pts device.
-set-hook -g client-attached 'run-shell "tmux set-environment SSH_TTY #{client_tty}"'
+# Auto-update SSH_TTY and SSH_AUTH_SOCK when reattaching after SSH reconnection.
+# Without this, yank.sh sends OSC 52 to a stale/dead pts device, and git/ssh
+# operations fail because the agent socket from the old connection is gone.
+set-hook -g client-attached 'run-shell "tmux set-environment SSH_TTY #{client_tty}; if [ -n \"$SSH_AUTH_SOCK\" ]; then tmux set-environment SSH_AUTH_SOCK $SSH_AUTH_SOCK; fi"'
 
 
 # ==========================
